# CuranSDK

./: .gitignore  .gitmodules  1216951454140741.txt  1217142397273719.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  HHHHCMakePresets.json  OldWindowsInstructions.md  README.md  TODO.md  imgui.ini  vcpkg - Copy.json  vcpkg.json  vs_config_curan.json
Curan/: CMakeLists.txt
Curan/applications/: CMakeLists.txt  README.md
Curan/libraries/: CMakeLists.txt  README.md
Curan/plus_config/: PlusDeviceSet_fCal_Sim_TemporalCalibration.xml  SavedData_test.xml
Curan/src/: DkUtilities.cpp  PkLibrary.h
Curan/tests/: CMakeLists.txt
applications/medical/: CMakeLists.txt
applications/medicalutilities/: CMakeLists.txt
libraries/imageprocessing/: CMakeLists.txt
libraries/optimization/: CMakeLists.txt
libraries/rendering/: CMakeLists.txt
libraries/robotutils/: CMakeLists.txt
libraries/temporary_communication/: CMakeLists.txt
libraries/userinterface/: CMakeLists.txt
libraries/utils/: CMakeLists.txt
src/: CMakeLists.txt  CkLibrary.cpp  CkLibrary.h  DkLibrary.cpp  DkLibrary.h  DkUtilities.h  PkLibrary.cpp  UserInterface.cpp  UserInterface.h  app.cpp  mainfile.cpp
src/communication/: Functor.cpp  Functor.h  ProcessorOIGTL.cpp
src/userinterface/: Context.cpp
src/utils/: CMakeLists.txt  Logger.cpp  Logger.h
tests/: CMakeLists.txt  test_asio.cpp  test_communication.cpp  test_user_interface.cpp  test_utils.cpp
tests/algebra/: CMakeLists.txt  test_centered_bounding_box.cpp  test_clipping_of_geometries.cpp
tests/boostprocess/: CMakeLists.txt  main.cpp
tests/communication/: CMakeLists.txt  classes_proc_handling.cpp  communication_with_arduino_or_esc32.cpp  communication_with_arduino_or_esc32_ultrasound.cpp  fri_openigtlink_dummy_implementation.cpp  mimic_proc_handling_multiprocess.cpp  test_asio.cpp  test_communication.cpp  test_dummy_for_unittest_integration.cpp  test_openIGTlink.cpp
tests/display/: CMakeLists.txt  capture_trajectories_from_screen.cpp  item_previewer_testing.cpp  panel_with_slider.cpp  skia_playground.cpp  study_skia_transformations.cpp  test_application_laucher.cpp  test_button.cpp  test_container_logic.cpp  test_container_with_window.cpp  test_dicom_compliant_display.cpp  test_dicom_compliant_render.cpp  test_dicom_render_with_known_shapes.cpp  test_implementation_of_task_tracker.cpp  test_imutable_text_panel.cpp  test_itk_plotter.cpp  test_itk_resampling.cpp  test_library_userinterface.cpp  test_memory_signal.cpp  test_minimum_window_size_computation.cpp  test_minipage_with_panelslider.cpp  test_multiple_plane_specification.cpp  test_multiple_sliders.cpp  test_multple_sliderplanes.cpp  test_openigtlink_display.cpp  test_openigtlink_viewer_with_button.cpp  test_overlay.cpp  test_overlay_api.cpp  test_plot_graph_realtime.cpp  test_sequencial_activation.cpp  test_sequency_planner.cpp  test_sequency_planner_cylinder.cpp  test_slider.cpp  test_specification_of_geometris_with_cube_intersection.cpp  test_textblob.cpp  test_user_interface.cpp  test_writable_text_panel.cpp
tests/gaussianmixtures/: CMakeLists.txt  main.cpp  test_ransac.cpp
tests/imageprocessing/: CMakeLists.txt  convert_Plus2ITK_image.cpp  debug_image_orientation_and_position.cpp  extract_oblique_slice.cpp  landmark_registration.cpp  mask_selection.cpp  print_dicom_image_data.cpp  real_time_extract_oblique_slice.cpp  real_time_extract_oblique_slice_two_dim.cpp  resample_point_cloud_fance_algorithm.cpp  test_filtering_algorithm.cpp  test_hough_circle.cpp  test_itk_canny.cpp  test_itk_manel.cpp  test_registration_framework.cpp  test_resampling_second_attempt.cpp  test_segment_surface.cpp  test_volume_creation.cpp  test_wrapped_circle.cpp
tests/optimization/: CMakeLists.txt  test_optimization_strategy.cpp  test_simulate_optimization_problem.cpp
tests/plus_volume_reconstruction/: CMakeLists.txt  dummy_classic.h  dummy_server.h  main.cpp  main_known_volume.cpp
tests/pointcloud/: CMakeLists.txt  main.cpp
tests/pytorch/: CMakeLists.txt  main.cpp
tests/registration/: CMakeLists.txt  main_volume.cpp  test_clustering_vs_matlab.cpp
tests/rendering/: CMakeLists.txt  rendering_new_fused.cpp  swing_car_display.cpp  test_append_with_dynamic_image_update.cpp  test_arrow.cpp  test_combo_ui.cpp  test_create_flat_mesh.cpp  test_heightfield.cpp  test_new_window_mecanism_for_reconstruction_and_roi.cpp  test_render_volume_from_itk.cpp  test_robot_and_volume_render_app.cpp  test_robot_display.cpp  test_robot_visualization_with_joint_angles_real_time.cpp  test_robot_with_ui.cpp  test_the_ui_with_blocking_call.cpp  test_ui_rendering.cpp  test_updatable_image.cpp  test_visualization_registration.cpp  test_volume_api.cpp  test_volume_api_update.cpp  test_window_api.cpp  validate_world_position_of_rendered_model.cpp  volume2.cpp  volume4.cpp  volume5_transfer.cpp
tests/robotcontrollers/: CMakeLists.txt  command_line_calibration.cpp  eigen_decomposition_for_impedance_controller.cpp  recorder_first_joint_only.cpp  test_cartesian_velocity_controller.cpp  test_forward_kin_vs_plus.cpp  test_handguidance_algorithm.cpp  test_impedance_controller.cpp  test_internal_rbdl_logic.cpp  test_joint_velocity_control.cpp  test_limit_cycle_controller.cpp  test_limit_cycle_controller_real.cpp  test_limit_cycle_with_gmr_control.cpp  test_print_robot_state.cpp  test_replay_recording.cpp  test_rhytmic_motion.cpp  test_robot_controller.cpp  test_robot_controller_with_switch.cpp  test_simulated_impedance_robot.cpp  test_simulated_limit_cycle.cpp  test_simulated_robot.cpp  test_simulated_velocity_robot.cpp  test_validation_matlab_cpp_interop.cpp  test_wall_avoidance_algorithm.cpp
tests/temporal_calibration/: CMakeLists.txt  older_tests.cpp
tests/test_cpp_api/: CMakeLists.txt  main.cpp  test_chrono_duration_propagation.cpp  test_cpp_laucher.cpp  test_executable_name_injection.cpp  test_geometry_computation.cpp  test_process_lauch_with_asio.cpp  test_secondary_dummy_project.cpp  test_std_cin_limitations.cpp  test_variant_storage_api.cpp  test_window_api.cpp
tests/utilities/: CMakeLists.txt  test_to_string.cpp  (+3 more)
(+4108 files in other folders)
