add_subdirectory(calibrate_ultrasound)
add_subdirectory(temporal_calibration)
add_subdirectory(robot_ultrasound_visualization)
add_subdirectory(box_specification)
add_subdirectory(friopenigtlinktracker)
add_subdirectory(reconstruct_volume)
add_subdirectory(gaussian_mixture)
add_subdirectory(registration)
add_subdirectory(friopenigtlinkfaketracker)
add_subdirectory(registration_robot_initialization)
add_subdirectory(ripple_compensation)
add_subdirectory(volumetric_path_planing)
add_subdirectory(intraoperative_navigation)