add_subdirectory(utils)
add_subdirectory(communication)
add_subdirectory(userinterface)
add_subdirectory(rendering)
add_subdirectory(imageprocessing)
add_subdirectory(optimization)
add_subdirectory(realtimekernel)
add_subdirectory(gaussianmixtures)
add_subdirectory(robotutils)
add_subdirectory(processmanagement)