find_package(Vulkan REQUIRED)

add_subdirectory(utilities)
add_subdirectory(communication)
add_subdirectory(display)
add_subdirectory(imageprocessing)
add_subdirectory(optimization)
add_subdirectory(rendering)
add_subdirectory(test_cpp_api)
add_subdirectory(plus_volume_reconstruction)
add_subdirectory(gaussianmixtures)
