add_subdirectory(calibrate_ultrasound)
add_subdirectory(temporal_calibration)
add_subdirectory(volumetric_reconstruction)
add_subdirectory(volumetric_path_planing_dicom_capable)
add_subdirectory(volumetric_path_planing_precious)
add_subdirectory(intraoperative_navigation)
add_subdirectory(application_laucher)
add_subdirectory(usdifferencemean)
add_subdirectory(image_cropper)
add_subdirectory(needle_validator)
add_subdirectory(surface_based_extraction)
add_subdirectory(robot_and_needle_with_ct)
add_subdirectory(data_replayer_for_videos)