add_subdirectory(calibrate_ultrasound)
add_subdirectory(temporal_calibration)
add_subdirectory(volumetric_reconstruction)
add_subdirectory(intraoperative_navigation)
add_subdirectory(application_laucher)
add_subdirectory(surface_based_extraction)
add_subdirectory(robot_and_needle_with_ct)
add_subdirectory(surgical_planning)

